<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.auth.register.RegisterActivity">

    <ImageView
        android:id="@+id/img_dicoding_register"
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo_description"
        android:scaleType="centerCrop"
        android:src="@drawable/dicoding_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_header_register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_dicoding_register"
        app:layout_constraintStart_toStartOf="@+id/img_dicoding_register"
        app:layout_constraintTop_toBottomOf="@+id/img_dicoding_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_header_register"
        app:layout_constraintStart_toStartOf="@+id/tv_header_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:drawablePadding="18dp"
            android:inputType="textPersonName|textCapWords"
            android:drawableStart="@drawable/ic_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.tms.dicodingstory.component.CustomEmailEditText
        android:id="@+id/register_email_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/name_input_layout"
        app:layout_constraintStart_toStartOf="@+id/name_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout" />

    <com.tms.dicodingstory.component.CustomPasswordEditText
        android:id="@+id/register_password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/register_email_form"
        app:layout_constraintStart_toStartOf="@+id/register_email_form"
        app:layout_constraintTop_toBottomOf="@+id/register_email_form" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/register_password_form"
        app:layout_constraintStart_toStartOf="@+id/register_password_form"
        app:layout_constraintTop_toBottomOf="@+id/register_password_form"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/navy_blue"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/register_password_form"
        app:layout_constraintStart_toStartOf="@+id/register_password_form"
        app:layout_constraintTop_toBottomOf="@+id/register_password_form" />

    <TextView
        android:id="@+id/tv_has_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/has_account"
        app:layout_constraintBottom_toTopOf="@+id/btn_go_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/sign_in"
        android:textColor="@color/navy_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>